TestCases/Errors/Haversine/observations/sst/sum_12_obs.spm
obs r9-c11 0.03
obs r10-c11 0.0228333333333333
obs r11-c11 0.0115731225296443
obs r12-c11 0.0116264090177134
obs r11-c12 0.0117391304347826
obs r12-c12 0.012695652173913
obs r6-c16 0.00551144094001237
obs r7-c16 0.00904761904761905
obs r7-c17 0.00476190476190476
error_value r9-c11 0.2
error_value r10-c11 0.2
error_value r11-c11 0.2
error_value r12-c11 0.2
error_value r11-c12 0.2
error_value r12-c12 0.2
error_value r6-c16 0.2
error_value r7-c16 0.2
error_value r7-c17 0.2
